tests/Core/positive/test008.jvc
-- recursion

def sum := \x if x = 0 then 0 else x + sum (x - 1);

sum 10000
