tests/Core/negative/parsing/test013.jvc
letrec [f g]
  g := \x f (x - 1);
  f := \x if x <= 0 then x else x + g (x - 1);
in
f 100
